--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,81 @@
+*, *::after, *::before {
+    box-sizing: border-box;
+}
+
 body {
     font-family: 'Courier New', Courier, monospace;
+    margin: 0;
+}
+
+header {
+    background-color: #1F2937;
+}
+
+.header-container {
+    width: 80%;
+    margin: 0 auto;
+    padding: 1em 0 8em 0;
+    display: flex;
+    flex-direction: column;
+    gap: 2em;
+}
+
+nav {
+    display: flex;
+    justify-content: space-between;
+}
+
+nav ul {
+    display: flex;
+    list-style-type: none;
+    gap: 1em;
+}
+
+nav ul li a, .secondary-text {
+    color: #E5E7EB;
+    font-size: 18px;
+}
+
+
+.main-text {
+    font-size: 48px;
+    color: #F9FAF8;
+    font-weight: 900;
+    margin-top: 0px;
+}
+
+nav ul li a {
+    text-decoration: none;
+}
+
+.header-content-container {
+    display: flex;
+}
+
+.header-content-container .left-side {
+    width: 50%;
+}
+
+.header-content-container .right-side {
+    width: 50%;
+}
+
+.header-content-container .right-side .image-cover-container {
+    width: 100%;
+    height: 100%;
+    background-image: url('./images/mr_robot_cover.jpg');
+    background-size: cover;
+    border-radius: 0.3em;
+    box-shadow: rgba(216, 18, 18, 0.1) 0px 1px 3px 0px, rgba(216, 18, 18, 0.06) 0px 1px 2px 0px;
+}
+
+.btn {
+    padding: 0.4em;
+    border-radius: 0.3em;
+    text-decoration: none;
+    color: #fff;
+}
+
+.btn-full {
+    background: #d81212;
 }
